--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,16 @@
+html {
+  margin: 0;
+}
+
 body {
-    background: yellow;
+  margin: 0;
+  background: #F2F2F2;
+  > header {
+    padding: 2rem;
+    background: #282A36;
+    color: white;
+    a {
+      color: #87D2C8;
+    }
+  }
 }
