Progress all around

--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,7 +1,11 @@
 {{> header }}
 
-  <h1>{{ title }}</h1>
-  <time>{{ date }}</time>
+<div id="content">
+  <h1>
+    <a href="/">&lt;</a>&nbsp;
+    {{ title }}
+  </h1>
   {{{ contents }}}
+</div>
 
 {{> footer }}
