--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,6 +1,4 @@
-  <footer>
-    <p>Generated with {{ generator }} &mdash; <a href="{{ url }}">{{ url }}</a></p>
-  </footer>
+  </div>
 
 <script src="http://localhost:35729/livereload.js"></script>
 </body>
