--- a/partials/header.html
+++ b/partials/header.html
@@ -10,11 +10,15 @@
 <body>
 
   <header class="text-code">
-    [ sharpshark28@joewroten.com ] <span class="text-success">(master)</span> ~/portfolio
-    <br />
-    <span class="text-success">⟩</span> npm start
-    <br />
-    Starting up server, serving <a href="/">./</a> on port: 8080 ...
-    <br />
-    Resume accessible @ <a href="/assets/resume.pdf">./resume.pdf</a>
+    <div class="wrapper">
+      [ <a href="#">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
+      <br />
+      <span class="text-success">⟩</span> npm start
+      <br />
+      Starting up server, serving <a href="/">./</a> on port: 8080 ...
+      <br />
+      Resume accessible @ <a href="/assets/resume.pdf">./resume.pdf</a>
+    </div>
   </header>
+
+  <div class="wrapper">
