--- a/layouts/post.html
+++ b/layouts/post.html
@@ -2,8 +2,7 @@
 
 <div id="content">
   <h1>
-    <a href="/">&lt;</a>&nbsp;
-    {{ title }}
+    <a href="/">&lt;&nbsp;</a>{{ title }}
   </h1>
   {{{ contents }}}
 </div>
