--- a/partials/header/index.html
+++ b/partials/header/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       [ <a href="#">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
-      <span class="text-success">⟩</span> npm start
+      <span class="text-success">⟩</span> npm start wow
       <br />
       Starting up server, serving <a href="/">./</a> on port: 8080 ...
       <br />
