--- a/partials/header.html
+++ b/partials/header.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <title>{{ title }}</title>
-  <link href="/lemonade.min.css" type="text/css" rel="stylesheet" />
+  <link href="/grid.css" type="text/css" rel="stylesheet" />
   <link href="/app.css" type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Poiret+One|Rokkitt|Source+Code+Pro" rel="stylesheet">
   <meta name="description" content="{{ description }}">
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 
   <header class="text-code">
-    <div class="wrapper">
+    <div class="container">
       [ <a href="#">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
       <span class="text-success">⟩</span> npm start
@@ -22,4 +23,4 @@
     </div>
   </header>
 
-  <main class="wrapper">
+  <main class="container">
