--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,16 +1,16 @@
 {{> header }}
 
-<header class="frame" id="home">
-  <div class="bit-60">
+<header class="grid" id="home">
+  <div class="grid__col grid__col--1-of-2">
     {{{ contents }}}
   </div>
 
-  <img id="face" class="bit-40" src="../../assets/site/face.png" alt="" />
+  <img id="face" class="grid__col grid__col--1-of-2" src="../../assets/site/face.png" alt="" />
 </header>
 
-<ul class="posts frame">
+<ul class="posts grid">
   {{#each collections.posts as |post|}}
-    <li data-type="{{ post.type }}" class="bit-3">
+    <li data-type="{{ post.type }}" class="grid__col grid__col--1-of-3 grid__col--m-1-of-2 grid__col--s-1-of-1">
       <figure onclick="window.location = '{{ post.path }}'">
         <div class="preview">
           <h3>{{ post.title }}</h3>
