--- a/src/app.scss
+++ b/src/app.scss
@@ -115,6 +115,18 @@ video {
   border-radius: .25rem;
 }
 
+.embed {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+
+  > iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .text-code {
   font-family: 'Source Code Pro', monospace;
 }
@@ -158,6 +170,7 @@ video {
   }
 
   h6 {
+    clear: both;
     text-align: center;
     color: $light;
   }
