First load intro

--- a/partials/header.html
+++ b/partials/header.html
@@ -9,17 +9,22 @@
   <meta name="description" content="{{ description }}">
   <meta name="viewport" content="width=device-width">
 </head>
-<body>
+<body class="intro-undecided">
+  <script>
+    document.getElementsByTagName('body')[0].className = localStorage.getItem('visited') ? '' : 'intro-play';
+    localStorage.setItem('visited', true);
+  </script>
 
   <header class="text-code">
     <div class="container">
       [ <a href="#">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
-      <span class="text-success">⟩</span> npm start
+      <span class="text-success">⟩</span>
+      <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">i</span><span id="intro-cmd-5">n</span><span id="intro-cmd-6">s</span><span id="intro-cmd-7">t</span><span id="intro-cmd-8">a</span><span id="intro-cmd-9">l</span><span id="intro-cmd-10">l</span>
       <br />
-      Starting up server, serving <a href="/">./</a> on port: 8080 ...
+      <span id="intro-response-1">Starting up server, serving <a href="/">./</a> on port: 8080 ...</span>
       <br />
-      Resume accessible @ <a href="/assets/resume.pdf">./resume.pdf</a>
+      <span id="intro-response-2">Resume accessible @ <a href="/assets/resume.pdf">./resume.pdf</a></span>
     </div>
   </header>
 
