Corrected npm install to run start

--- a/src/app.scss
+++ b/src/app.scss
@@ -341,6 +341,9 @@ video {
   #intro-cmd-10 {
     animation-delay: 4s;
   }
+  #intro-cmd-11 {
+    animation-delay: 4.1s;
+  }
   #intro-response-1 {
     animation-delay: 4.2s;
   }
