--- a/partials/header.html
+++ b/partials/header.html
@@ -20,7 +20,7 @@
       [ <a href="mailto:sharpshark28@joewroten.com">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
       <span class="text-success">⟩</span>
-      <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">i</span><span id="intro-cmd-5">n</span><span id="intro-cmd-6">s</span><span id="intro-cmd-7">t</span><span id="intro-cmd-8">a</span><span id="intro-cmd-9">l</span><span id="intro-cmd-10">l</span>
+      <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">r</span><span id="intro-cmd-5">u</span><span id="intro-cmd-6">n</span>&nbsp;<span id="intro-cmd-7">s</span><span id="intro-cmd-8">t</span><span id="intro-cmd-9">a</span><span id="intro-cmd-10">r</span><span id="intro-cmd-11">t</span>
       <br />
       <span id="intro-response-1">Starting up server, serving <a href="/">./</a> on port: 8080 ...</span>
       <br />
