--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,9 +12,8 @@
   {{#each collections.posts as |post|}}
     <li data-type="{{ post.type }}" class="grid__col grid__col--1-of-3 grid__col--m-1-of-2 grid__col--s-1-of-1">
       <figure onclick="window.location = '{{ post.path }}'">
-        <div class="preview">
+        <div class="preview" style="background-image: url(../../assets/media/{{ post.preview }})">
           <h3>{{ post.title }}</h3>
-          <img src="../../assets/media/{{ post.preview }}" alt="" />
         </div>
         <figcaption>
           {{ post.description }}
