--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
     {{{ contents }}}
   </div>
 
-  <img id="face" class="grid__col grid__col--1-of-2" src="../../assets/site/face.png" alt="" />
+  <img id="logo" class="grid__col grid__col--1-of-2" src="../../assets/site/logo.png" alt="" />
 </header>
 
 <ul class="posts grid">
