Link to blog added

--- a/partials/header.html
+++ b/partials/header.html
@@ -24,7 +24,7 @@
       <br />
       <span id="intro-response-1">Starting up server, serving <a href="/">./</a> on port: 8080 ...</span>
       <br />
-      <span id="intro-response-2">Resume accessible @ <a href="/assets/resume.pdf">./resume.pdf</a></span>
+      <span id="intro-response-2">Asset served <a href="/assets/resume.pdf">./<strong>Resume.pdf</a> | Blog connection established <a href="http://wrotenwrites.com/">wrotenwrites.com</a></span>
     </div>
   </header>
 
