--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,30 @@
 <header class="grid" id="home">
   <div class="grid__col grid__col--1-of-2">
     {{{ contents }}}
+
+    <label for="morebio">
+      <a>Bio...</a>
+    </label>
+
+    <input type="checkbox" id="morebio" />
+
+    <aside id="bio">
+      <img src="/assets/photo.jpg" alt="Rainbow haired smiling gentlemen" />
+      <p>
+        <small>
+          Passionate interactive experience crafter breathing the merger of design and development.
+        </small>
+      </p>
+      <p>
+        <small class="secondary">
+          💖 Remote gigs.
+          <br />
+          🎤 Happy to speak at your event.
+          <br />
+          👂 Open to hearing opportunities.
+        </small>
+      </p>
+    </aside>
   </div>
 
   <img id="logo" class="grid__col grid__col--1-of-2" src="../../assets/site/logo.png" alt="" />
