--- a/partials/header/index.html
+++ b/partials/header/index.html
@@ -12,7 +12,7 @@
 
   <header class="text-code">
     <div class="wrapper">
-      [ <a href="#">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
+      [ <a href="mailto:joe@wroten.me">joe<span class="normal">@</span><span class="secondary">wroten.me</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
       <span class="text-success">⟩</span> npm start wow
       <br />
