Corrected contact email

--- a/partials/header.html
+++ b/partials/header.html
@@ -17,7 +17,7 @@
 
   <header class="text-code">
     <div class="container">
-      [ <a href="mailto:sharpshark28@joewroten.com">sharpshark28<span class="normal">@</span><span class="secondary">joewroten.com</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
+      [ <a href="mailto:joe@wroten.me">joe<span class="normal">@</span><span class="secondary">wroten.me</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
       <span class="text-success">⟩</span>
       <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">r</span><span id="intro-cmd-5">u</span><span id="intro-cmd-6">n</span>&nbsp;<span id="intro-cmd-7">s</span><span id="intro-cmd-8">t</span><span id="intro-cmd-9">a</span><span id="intro-cmd-10">r</span><span id="intro-cmd-11">t</span>
