sped up intro, added github link

--- a/partials/header.html
+++ b/partials/header.html
@@ -20,11 +20,11 @@
       [ <a href="mailto:joe@wroten.me">joe<span class="normal">@</span><span class="secondary">wroten.me</span></a> ] <span class="text-success">(master)</span> <span class="dim">~/portfolio</span>
       <br />
       <span class="text-success">⟩</span>
-      <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">r</span><span id="intro-cmd-5">u</span><span id="intro-cmd-6">n</span>&nbsp;<span id="intro-cmd-7">s</span><span id="intro-cmd-8">t</span><span id="intro-cmd-9">a</span><span id="intro-cmd-10">r</span><span id="intro-cmd-11">t</span>
+      <span id="intro-blink">&block;</span><span id="intro-cmd-1">n</span><span id="intro-cmd-2">p</span><span id="intro-cmd-3">m</span>&nbsp;<span id="intro-cmd-4">s</span><span id="intro-cmd-5">t</span><span id="intro-cmd-6">a</span><span id="intro-cmd-7">r</span><span id="intro-cmd-8">t</span>
       <br />
       <span id="intro-response-1">Starting up server, serving <a href="/">./</a> on port: 8080 ...</span>
       <br />
-      <span id="intro-response-2">Asset served <a href="/assets/resume.pdf">./Resume.pdf</a> | Blog connection established <a href="http://wrotenwrites.com/">wrotenwrites.com</a></span>
+      <span id="intro-response-2">Asset served <a href="/assets/resume.pdf">./Resume.pdf</a> | Connections established: <a href="http://wrotenwrites.com/">wrotenwrites.com</a>, <a href="https://github.com/sharpshark28">github.com/sharpshark28</a></span>
     </div>
   </header>
 
