hbs templates are real html pages

--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -1,5 +1,18 @@
-<h1>{{name}}</h1>
-<hr />
-<main>
-  {{{readme.html}}}
-</main>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Wroten - {{name}}</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Joe Wroten">
+  <meta name="description" content="Web engineer realizing the best tools to communicate valuable information to the people who need it.">
+  <meta name="keywords" content="developer,designer,engineer,web,portfolio">
+  <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes">
+</head>
+<body>
+  <h1>{{name}}</h1>
+  <hr />
+  <main>
+    {{{readme.html}}}
+  </main>
+</body>
+</html>
