--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -1,7 +1,12 @@
 html, body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 15pt;
+}
+
+code {
+  font-family: 'Source Code Pro', monospace;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,6 +27,11 @@ h1 {
   padding-bottom: 20px;
 }
 
+.-container {
+  max-width: 40rem;
+  margin: 0 auto;
+}
+
 .interior-header {
   background: #15202C;
 }
@@ -31,10 +41,13 @@ h1 {
 }
 
 .interior-headline {
-  line-height: 1em;
-  margin: 0;
   background: linear-gradient(90deg, rgba(235, 181, 242, .3), rgba(128, 95, 132, .3));
   color: white;
+}
+
+.interior-headline h1 {
+  line-height: 1em;
+  margin: 0 auto;
 }
 
 .interior-content h1:first-child {
@@ -46,8 +59,10 @@ h1 {
   margin-top: 0;
 }
 
-.interior-content code {
+.interior-content pre code {
+  border-radius: 3px;
   max-width: 100%;
+  max-height: 6em;
   display: block;
   overflow: auto;
 }
