--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -16,10 +16,19 @@
 <body>
   <header class="interior-header">
     <div class="interior-topbar -pad-h -pad-v">
-      ...
+      <a href="/">
+        <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <use xlink:href="./assets/spritesheet.svg#back" />
+        </svg>
+      </a>
     </div>
     <div class="interior-headline -pad-h -pad-v">
-      <h1 class="-container">{{name}}</h1>
+      <h1 class="-container">
+        <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <use xlink:href="./assets/spritesheet.svg#git" />
+        </svg>
+        {{name}}
+      </h1>
     </div>
   </header>
   <main class="interior-content -container -pad-h -pad-v">
