--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -46,7 +46,7 @@
             {{/if}}
           </a>
         </span>
-        <ul class="-left interior-tags">
+        <ul class="-left tags">
           {{#each repositoryTopics.edges}}
             <li><a href="#" class="tag">{{this.node.topic.name}}</a>
           {{/each}}
