--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -39,6 +39,10 @@ a {
   padding-bottom: 20px;
 }
 
+.-mar-no {
+  margin: 0;
+}
+
 .-left {
   float: left;
 }
@@ -92,10 +96,22 @@ a {
 .index-interiorlink {
   display: block;
   width: 100%;
-  padding: 1rem;
+  padding: .5rem 2rem;
   color: white;
   text-decoration: none;
   box-sizing: border-box;
+}
+
+.index-interiorlink-description {
+  height: 1.5em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.index-interiorlink-icon {
+  position: relative;
+  top: .2em;
 }
 
 .interior-topbar {
@@ -112,6 +128,11 @@ a {
 .index-interiorlink.-volunteer,
 .interior-headline.-volunteer {
   background: linear-gradient(90deg, rgba(235, 181, 242, .3), rgba(128, 95, 132, .3));
+}
+
+.index-interiorlink.-git,
+.interior-headline.-git {
+  background: linear-gradient(90deg, rgba(181, 242, 186, .3), rgba(95, 132, 105, .3));
 }
 
 .interior-headline svg {
