--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -22,7 +22,7 @@
         </svg>
       </a>
     </div>
-    <div class="interior-headline -pad-h -pad-v">
+    <div class="interior-headline -{{pageType}} -pad-h -pad-v">
       <h1 class="-container">
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#git" />
