--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -19,7 +19,7 @@
         <a class="index-interiorlink -{{this.pageType}}" href="./{{this.name}}.html">
           <h3 class="-mar-no">
             <svg class="index-interiorlink-icon" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <use xlink:href="./assets/spritesheet.svg#git" />
+              <use xlink:href="./assets/spritesheet.svg#{{this.pageType}}" />
             </svg>
             {{this.name}}
           </h3>
