--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -25,7 +25,7 @@
     <div class="interior-headline -{{pageType}} -pad-h -pad-v">
       <h1 class="-container">
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <use xlink:href="./assets/spritesheet.svg#git" />
+          <use xlink:href="./assets/spritesheet.svg#{{pageType}}" />
         </svg>
         {{name}}
       </h1>
