--- a/src/assets/stylesheet.css
+++ b/src/assets/stylesheet.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 svg {
-  fill: white;
+  fill: currentColor;
   max-width: 100%;
   max-height: 100%;
   height: 1em;
@@ -79,6 +79,32 @@ a {
 
 .-git .tag {
   background: #F0FFED;
+}
+
+.index-top {
+  color: #5B7189;
+  margin-bottom: 2.5rem;
+}
+
+.index-top-info {
+  display: flex;
+}
+
+.index-top em {
+  color: #B8CCE3;
+  font-style: normal;
+}
+
+.index .name {
+  font-size: 20px;
+  flex-grow: 1;
+}
+
+.index .intro {
+  font-size: 59px;
+  line-height: 45px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
 }
 
 .index .tag {
