--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -13,6 +13,29 @@
   <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes">
 </head>
 <body class="index">
+  <header>
+    <!-- TODO -->
+  </header>
+  <main class="index-top -container -pad-h">
+    <h1 class="intro">
+      Canine pretending to be a <em>web engineer</em>
+    </h1>
+    <div class="index-top-info">
+      <h2 class="name -mar-no">
+        <em>Joe Wroten</em>
+      </h2>
+      <div>
+        <a href="#">
+          <em>
+            <svg class="index-interiorlink-icon" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <use xlink:href="./assets/spritesheet.svg#resume" />
+            </svg>
+            Resume
+          </em>
+        </a>
+      </div>
+    </div>
+  </main>
   <ol class="index-interiorlinks">
     {{#each this}}
       <li class="index-interiorlink-wrapper">
