--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -13,8 +13,12 @@
   <meta name="viewport" content="width=device-width; height=device-height; maximum-scale=1.4; initial-scale=1.0; user-scalable=yes">
 </head>
 <body class="index">
-  <header>
-    <!-- TODO -->
+  <header class="index-header -container -pad-h -pad-v">
+    <a href="/" class="index-menulink">
+      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <use xlink:href="./assets/spritesheet.svg#menu" />
+      </svg>
+    </a>
   </header>
   <main class="index-top -container -pad-h">
     <h1 class="intro">
