--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -19,6 +19,9 @@
           <use xlink:href="./assets/spritesheet.svg#menu" />
       </svg>
     </a>
+    <a href="#" class="about-link">
+      <img class="about-link-image" src="./assets/avatar-small.png" alt="About Joe Wroten" />
+    </a>
   </header>
   <main class="index-top -container -pad-h">
     <h1 class="intro">
