--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -15,11 +15,14 @@
 </head>
 <body class="interior -{{pageType}}">
   <header class="interior-header">
-    <div class="interior-topbar -pad-h -pad-v">
+    <div class="interior-topbar -container -pad-h -pad-v">
       <a href="/">
         <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <use xlink:href="./assets/spritesheet.svg#back" />
         </svg>
+      </a>
+      <a href="#" class="about-link">
+        <img class="about-link-image" src="./assets/avatar-small.png" alt="About Joe Wroten" />
       </a>
     </div>
     <div class="interior-headline -{{pageType}} -pad-h -pad-v">
