--- a/src/templates/interior.hbs
+++ b/src/templates/interior.hbs
@@ -61,6 +61,9 @@
     </article>
   </main>
 
+
+  {{> footer}}
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </body>
